--- a/gmx-demo.ipynb
+++ b/gmx-demo.ipynb
@@ -10,7 +10,22 @@
     "import urllib\n",
     "import gromacs as gmx\n",
     "import nglview as nv\n",
-    "import mdtraj as md"
+    "import mdtraj as md\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b6afc62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdrun=gmx.MDrunnerK8s(image='cerit.io/ljocha/gromacs:2023-2-plumed-2-9-afed-pytorch-model-cv')\n",
+    "\n",
+    "def run(mpi=1,omp=2,gpus=1,**kwargs):\n",
+    "    mdrun.run(pre={'cores':omp*mpi,'mpi':mpi,'omp':omp,'gpus':gpus}, mdrunargs={**kwargs,'ntomp':omp},ncores=mpi)"
    ]
   },
   {
@@ -20,8 +35,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdb='1L2Y'\n",
+    "pdb='6pxm'\n",
     "urllib.request.urlretrieve(f'https://files.rcsb.org/download/{pdb}.pdb',f'{pdb}.pdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a75bbed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nv.show_file(f'{pdb}.pdb')"
    ]
   },
   {
@@ -116,7 +141,7 @@
     "; Parameters describing what to do, when to stop and what to save\n",
     "integrator  = steep         ; Algorithm (steep = steepest descent minimization)\n",
     "emtol       = 1000.0        ; Stop minimization when the maximum force < 1000.0 kJ/mol/nm\n",
-    "emstep      = 0.01          ; Minimization step size\n",
+    "emstep      = 0.005          ; Minimization step size\n",
     "nsteps      = 50000         ; Maximum number of (minimization) steps to perform\n",
     "\n",
     "; Parameters describing how to find the neighbors of each atom and how to calculate the interactions\n",
@@ -135,16 +160,6 @@
     "\"\"\")\n",
     "    \n",
     "gmx.grompp(f='minim.mdp',c=pdb+'-ions.gro',p=pdb+'.top',o='em.tpr')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b6afc62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdrun=gmx.MDrunnerK8s()"
    ]
   },
   {
@@ -193,7 +208,350 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a75bbed",
+   "id": "f3aa116a-f66e-4264-b375-7654bee0fcf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('nvt.mdp','w') as nvt:\n",
+    "    nvt.write('''title                   = OPLS Lysozyme NVT equilibration \n",
+    "define                  = -DPOSRES  ; position restrain the protein\n",
+    "; Run parameters\n",
+    "integrator              = md        ; leap-frog integrator\n",
+    "nsteps                  = 50000     ; 2 * 50000 = 100 ps\n",
+    "dt                      = 0.002     ; 2 fs\n",
+    "; Output control\n",
+    "nstxout                 = 500       ; save coordinates every 1.0 ps\n",
+    "nstvout                 = 500       ; save velocities every 1.0 ps\n",
+    "nstenergy               = 500       ; save energies every 1.0 ps\n",
+    "nstlog                  = 500       ; update log file every 1.0 ps\n",
+    "; Bond parameters\n",
+    "continuation            = no        ; first dynamics run\n",
+    "constraint_algorithm    = lincs     ; holonomic constraints \n",
+    "constraints             = h-bonds   ; bonds involving H are constrained\n",
+    "lincs_iter              = 1         ; accuracy of LINCS\n",
+    "lincs_order             = 4         ; also related to accuracy\n",
+    "; Nonbonded settings \n",
+    "cutoff-scheme           = Verlet    ; Buffered neighbor searching\n",
+    "ns_type                 = grid      ; search neighboring grid cells\n",
+    "nstlist                 = 10        ; 20 fs, largely irrelevant with Verlet\n",
+    "rcoulomb                = 1.0       ; short-range electrostatic cutoff (in nm)\n",
+    "rvdw                    = 1.0       ; short-range van der Waals cutoff (in nm)\n",
+    "DispCorr                = EnerPres  ; account for cut-off vdW scheme\n",
+    "; Electrostatics\n",
+    "coulombtype             = PME       ; Particle Mesh Ewald for long-range electrostatics\n",
+    "pme_order               = 4         ; cubic interpolation\n",
+    "fourierspacing          = 0.16      ; grid spacing for FFT\n",
+    "; Temperature coupling is on\n",
+    "tcoupl                  = V-rescale             ; modified Berendsen thermostat\n",
+    "tc-grps                 = Protein Non-Protein   ; two coupling groups - more accurate\n",
+    "tau_t                   = 0.1     0.1           ; time constant, in ps\n",
+    "ref_t                   = 300     300           ; reference temperature, one for each group, in K\n",
+    "; Pressure coupling is off\n",
+    "pcoupl                  = no        ; no pressure coupling in NVT\n",
+    "; Periodic boundary conditions\n",
+    "pbc                     = xyz       ; 3-D PBC\n",
+    "; Velocity generation\n",
+    "gen_vel                 = yes       ; assign velocities from Maxwell distribution\n",
+    "gen_temp                = 300       ; temperature for Maxwell distribution\n",
+    "gen_seed                = -1        ; generate a random seed\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fdaf288-e37f-4e56-80e4-aa06b39aa0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.grompp(f=\"nvt.mdp\",c=\"em.gro\",r=\"em.gro\",p=pdb+'.top',o=\"nvt.tpr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9698523-4135-4825-ae3b-253953b2bb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run(mpi=4,omp=2,deffnm='nvt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63a525c2-c8c4-4566-8951-a88272caed76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.energy(f='nvt.edr',o='press.xvg',input='Pressure')\n",
+    "#gmx.energy(f='nvt.edr',o='dens.xvg',input='Density')\n",
+    "gmx.energy(f='nvt.edr',o='temp.xvg',input='Temperature')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c5ff32a-d143-430c-8082-35ca0c4d8199",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = np.loadtxt('temp.xvg',comments=['#','@'])\n",
+    "press = np.loadtxt('press.xvg',comments=['#','@'])\n",
+    "\n",
+    "plt.figure(figsize=(15,9))\n",
+    "plt.subplot(211)\n",
+    "plt.plot(press[:,0],press[:,1])\n",
+    "plt.title('isothermal-isochoric equilibration')\n",
+    "plt.grid()\n",
+    "#plt.xlabel('time (ps)')\n",
+    "plt.ylabel(\"pressure (bar)\")\n",
+    "\n",
+    "\n",
+    "plt.subplot(212)\n",
+    "plt.xlabel('time (ps)')\n",
+    "plt.ylabel('temperature (K)')\n",
+    "plt.grid()\n",
+    "plt.plot(temp[:,0],temp[:,1])\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6ad7b0e-cd84-4640-9dbc-b2d757bb1cd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('npt.mdp','w') as npt:\n",
+    "    npt.write('''define                  = -DPOSRES  ; position restrain the protein\n",
+    "; Run parameters\n",
+    "integrator              = md        ; leap-frog integrator\n",
+    "nsteps                  = 50000     ; 2 * 50000 = 100 ps\n",
+    "dt                      = 0.002     ; 2 fs\n",
+    "; Output control\n",
+    "nstxout                 = 500       ; save coordinates every 1.0 ps\n",
+    "nstvout                 = 500       ; save velocities every 1.0 ps\n",
+    "nstenergy               = 500       ; save energies every 1.0 ps\n",
+    "nstlog                  = 500       ; update log file every 1.0 ps\n",
+    "; Bond parameters\n",
+    "continuation            = yes       ; Restarting after NVT \n",
+    "constraint_algorithm    = lincs     ; holonomic constraints \n",
+    "constraints             = h-bonds   ; bonds involving H are constrained\n",
+    "lincs_iter              = 1         ; accuracy of LINCS\n",
+    "lincs_order             = 4         ; also related to accuracy\n",
+    "; Nonbonded settings \n",
+    "cutoff-scheme           = Verlet    ; Buffered neighbor searching\n",
+    "ns_type                 = grid      ; search neighboring grid cells\n",
+    "nstlist                 = 10        ; 20 fs, largely irrelevant with Verlet scheme\n",
+    "rcoulomb                = 1.0       ; short-range electrostatic cutoff (in nm)\n",
+    "rvdw                    = 1.0       ; short-range van der Waals cutoff (in nm)\n",
+    "DispCorr                = EnerPres  ; account for cut-off vdW scheme\n",
+    "; Electrostatics\n",
+    "coulombtype             = PME       ; Particle Mesh Ewald for long-range electrostatics\n",
+    "pme_order               = 4         ; cubic interpolation\n",
+    "fourierspacing          = 0.16      ; grid spacing for FFT\n",
+    "; Temperature coupling is on\n",
+    "tcoupl                  = V-rescale             ; modified Berendsen thermostat\n",
+    "tc-grps                 = Protein Non-Protein   ; two coupling groups - more accurate\n",
+    "tau_t                   = 0.1     0.1           ; time constant, in ps\n",
+    "ref_t                   = 300     300           ; reference temperature, one for each group, in K\n",
+    "; Pressure coupling is on\n",
+    "; ljocha pcoupl                  = Parrinello-Rahman     ; Pressure coupling on in NPT\n",
+    "pcoupl = C-rescale\n",
+    "pcoupltype              = isotropic             ; uniform scaling of box vectors\n",
+    "; ljocha tau_p                   = 2.0                   ; time constant, in ps\n",
+    "tau_p = 5.0\n",
+    "ref_p                   = 1.0                   ; reference pressure, in bar\n",
+    "compressibility         = 4.5e-5                ; isothermal compressibility of water, bar^-1\n",
+    "refcoord_scaling        = com\n",
+    "; Periodic boundary conditions\n",
+    "pbc                     = xyz       ; 3-D PBC\n",
+    "; Velocity generation\n",
+    "gen_vel                 = no        ; Velocity generation is off \n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68921fbc-b78e-4673-805e-9c7ca8d9166a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.grompp(f=\"npt.mdp\",c=\"nvt.gro\",r=\"nvt.gro\",p=pdb+'.top',o=\"npt.tpr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb2fa109-2b79-45a0-920c-11c5abb22047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run(mpi=4,omp=2,deffnm='npt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "237d5f79-511c-4936-bca3-599f1df6695f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.energy(f='npt.edr',o='press.xvg',input='Pressure')\n",
+    "gmx.energy(f='npt.edr',o='dens.xvg',input='Density')\n",
+    "gmx.energy(f='npt.edr',o='temp.xvg',input='Temperature')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "615a227a-1235-4c0e-8b76-10e853e1072a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = np.loadtxt('temp.xvg',comments=['#','@'])\n",
+    "press = np.loadtxt('press.xvg',comments=['#','@'])\n",
+    "dens = np.loadtxt('dens.xvg',comments=['#','@'])\n",
+    "\n",
+    "plt.figure(figsize=(15,9))\n",
+    "plt.subplot(311)\n",
+    "plt.plot(press[:,0],press[:,1])\n",
+    "plt.title('isothermal-isobaric equilibration')\n",
+    "plt.grid()\n",
+    "#plt.xlabel('time (ps)')\n",
+    "plt.ylabel(\"pressure (bar)\")\n",
+    "\n",
+    "plt.subplot(312)\n",
+    "plt.ylabel('density (kg/m3)')\n",
+    "plt.grid()\n",
+    "plt.plot(dens[:,0],dens[:,1])\n",
+    "\n",
+    "plt.subplot(313)\n",
+    "plt.xlabel('time (ps)')\n",
+    "plt.ylabel('temperature (K)')\n",
+    "plt.grid()\n",
+    "plt.plot(temp[:,0],temp[:,1])\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693cf240-2353-41ea-b194-3898b78e1b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = 100 #ps\n",
+    "nsteps = time * 500 # XXX: dt = 0.002\n",
+    "\n",
+    "with open('md.mdp','w') as mdp:\n",
+    "    mdp.write(f'''integrator              = md        ; leap-frog integrator\n",
+    "dt                      = 0.002     ; 2 fs\n",
+    "; Output control\n",
+    "nstxout                 = 0         ; suppress bulky .trr file by specifying \n",
+    "nstvout                 = 0         ; 0 for output frequency of nstxout,\n",
+    "nstfout                 = 0         ; nstvout, and nstfout\n",
+    "nstenergy               = 5000      ; save energies every 10.0 ps\n",
+    "nstlog                  = 5000      ; update log file every 10.0 ps\n",
+    "nstxout-compressed      = 5000      ; save compressed coordinates every 10.0 ps\n",
+    "compressed-x-grps       = System    ; save the whole system\n",
+    "; Bond parameters\n",
+    "continuation            = yes       ; Restarting after NPT \n",
+    "constraint_algorithm    = lincs     ; holonomic constraints \n",
+    "constraints             = h-bonds   ; bonds involving H are constrained\n",
+    "lincs_iter              = 1         ; accuracy of LINCS\n",
+    "lincs_order             = 4         ; also related to accuracy\n",
+    "; Neighborsearching\n",
+    "cutoff-scheme           = Verlet    ; Buffered neighbor searching\n",
+    "ns_type                 = grid      ; search neighboring grid cells\n",
+    "nstlist                 = 10        ; 20 fs, largely irrelevant with Verlet scheme\n",
+    "rcoulomb                = 1.0       ; short-range electrostatic cutoff (in nm)\n",
+    "rvdw                    = 1.0       ; short-range van der Waals cutoff (in nm)\n",
+    "; Electrostatics\n",
+    "coulombtype             = PME       ; Particle Mesh Ewald for long-range electrostatics\n",
+    "pme_order               = 4         ; cubic interpolation\n",
+    "fourierspacing          = 0.16      ; grid spacing for FFT\n",
+    "; Temperature coupling is on\n",
+    "tcoupl                  = V-rescale             ; modified Berendsen thermostat\n",
+    "tc-grps                 = Protein Non-Protein   ; two coupling groups - more accurate\n",
+    "tau_t                   = 0.1     0.1           ; time constant, in ps\n",
+    "ref_t                   = 300     300           ; reference temperature, one for each group, in K\n",
+    "; Pressure coupling is on\n",
+    "pcoupl                  = Parrinello-Rahman     ; Pressure coupling on in NPT\n",
+    "pcoupltype              = isotropic             ; uniform scaling of box vectors\n",
+    "tau_p                   = 2.0                   ; time constant, in ps\n",
+    "ref_p                   = 1.0                   ; reference pressure, in bar\n",
+    "compressibility         = 4.5e-5                ; isothermal compressibility of water, bar^-1\n",
+    "; Periodic boundary conditions\n",
+    "pbc                     = xyz       ; 3-D PBC\n",
+    "; Dispersion correction\n",
+    "DispCorr                = EnerPres  ; account for cut-off vdW scheme\n",
+    "; Velocity generation\n",
+    "gen_vel                 = no        ; Velocity generation is off \n",
+    "nsteps = {nsteps}\n",
+    "''')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05d99f10-e54e-4559-950c-0ed31f4df54e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.grompp(f=\"md.mdp\",c=\"npt.gro\",r=\"npt.gro\",p=pdb+'.top',o=\"md.tpr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e26a6f-70ea-460c-8ec1-b31d6c6c83ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run(mpi=4,omp=4,deffnm='md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea54eb6-7f90-4405-8bfc-d26159b10596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.trjconv(f='md.xtc',s='npt.gro',fit='rot+trans',input='Protein Protein'.split(),o='protein.xtc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "850e36a4-2a8d-4c59-850b-1754f0aede24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmx.trjconv(f='protein.xtc',s=f'{pdb}-box.gro',pbc='nojump',input='Protein',o='pbc.xtc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7392249-64e3-4b75-8f56-40cf46c19b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr = md.load('pbc.xtc',top=f'{pdb}-box.gro')\n",
+    "nv.show_mdtraj(tr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "161633ba-d2d6-4f5e-ad71-0ae7f31d3350",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -215,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
