--- a/gmx-demo.ipynb
+++ b/gmx-demo.ipynb
@@ -169,9 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ompthreads=2\n",
-    "mpiranks=1\n",
-    "mdrun.run(pre={'cores':ompthreads*mpiranks,'gpus':1}, mdrunargs={'deffnm':'em','ntomp':ompthreads},ncores=mpiranks)"
+    "run(mpi=1,omp=2,deffnm='em',gpus=0)"
    ]
   },
   {
