mpi/omp wrt. mol, only protein in xtc

--- a/gmx-demo.ipynb
+++ b/gmx-demo.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdrun=gmx.MDrunnerK8s(image='cerit.io/ljocha/gromacs:2023-2-plumed-2-9-afed-pytorch-model-cv')\n",
+    "mdrun=gmx.MDrunnerK8s()\n",
     "\n",
     "def run(mpi=1,omp=2,gpus=1,**kwargs):\n",
     "    mdrun.run(pre={'cores':omp*mpi,'mpi':mpi,'omp':omp,'gpus':gpus}, mdrunargs={**kwargs,'ntomp':omp},ncores=mpi)"
@@ -35,7 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdb='6pxm'\n",
+    "# big guy\n",
+    "# pdb='6pxm'\n",
+    "# mpi=4\n",
+    "# omp=4\n",
+    "\n",
+    "# little toy\n",
+    "pdb='1l2y'\n",
+    "mpi=1\n",
+    "omp=2\n",
+    "\n",
     "urllib.request.urlretrieve(f'https://files.rcsb.org/download/{pdb}.pdb',f'{pdb}.pdb')"
    ]
   },
@@ -169,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# can fail initially with k8s timeout etc., don't worry and retry\n",
     "run(mpi=1,omp=2,deffnm='em',gpus=0)"
    ]
   },
@@ -272,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run(mpi=4,omp=2,deffnm='nvt')"
+    "run(mpi=mpi,omp=omp,deffnm='nvt')"
    ]
   },
   {
@@ -388,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run(mpi=4,omp=2,deffnm='npt')"
+    "run(mpi=mpi,omp=omp,deffnm='npt')"
    ]
   },
   {
@@ -456,7 +466,7 @@
     "nstenergy               = 5000      ; save energies every 10.0 ps\n",
     "nstlog                  = 5000      ; update log file every 10.0 ps\n",
     "nstxout-compressed      = 5000      ; save compressed coordinates every 10.0 ps\n",
-    "compressed-x-grps       = System    ; save the whole system\n",
+    "compressed-x-grps       = Protein    \n",
     "; Bond parameters\n",
     "continuation            = yes       ; Restarting after NPT \n",
     "constraint_algorithm    = lincs     ; holonomic constraints \n",
@@ -512,27 +522,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run(mpi=4,omp=4,deffnm='md')"
+    "run(mpi=mpi,omp=omp,deffnm='md')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea54eb6-7f90-4405-8bfc-d26159b10596",
+   "id": "2e4e2e4e-619d-4297-aa4a-ada5df9d7cc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72c783a6-cd16-4220-86d6-ff3a975d01fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmx.trjconv(f='md.xtc',s='npt.gro',fit='rot+trans',input='Protein Protein'.split(),o='protein.xtc')"
+    "gmx.trjconv(f='md.xtc',s=pdb+'-box.gro',pbc='nojump',input='Protein Protein'.split(),o='pbc.xtc')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "850e36a4-2a8d-4c59-850b-1754f0aede24",
+   "id": "3907248a-f8f5-4710-bca2-09b22ec221a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmx.trjconv(f='protein.xtc',s=f'{pdb}-box.gro',pbc='nojump',input='Protein',o='pbc.xtc')"
+    "gmx.trjconv(f='pbc.xtc',s=pdb+'-box.gro',fit='rot+trans',input='Protein Protein'.split(),o='fit.xtc')"
    ]
   },
   {
@@ -542,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr = md.load('pbc.xtc',top=f'{pdb}-box.gro')\n",
+    "tr = md.load('fit.xtc',top=f'{pdb}-box.gro')\n",
     "nv.show_mdtraj(tr)"
    ]
   },
@@ -571,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
